--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
     - assets/fonts/pretendard/
     - assets/icons/
     - assets/images/
+    - assets/translations/
 
   fonts:
     - family: pretendard
