--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -23,7 +23,7 @@
     <key>CFBundleVersion</key>
     <string>$(FLUTTER_BUILD_NUMBER)</string>
     <key>LSRequiresIPhoneOS</key>
-    <true/>
+    <true />
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>UIMainStoryboardFile</key>
@@ -42,8 +42,27 @@
       <string>UIInterfaceOrientationLandscapeRight</string>
     </array>
     <key>CADisableMinimumFrameDurationOnPhone</key>
-    <true/>
+    <true />
     <key>UIApplicationSupportsIndirectInputEvents</key>
-    <true/>
+    <true />
+
+    <!-- ✅ Google Sign-In 설정 추가 -->
+    <key>GIDClientID</key>
+    <string>965384658339-9cnpnp435m5ini1t701hk515m5c2dnm2.apps.googleusercontent.com</string>
+
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+        <key>CFBundleTypeRole</key>
+        <string>Editor</string>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <!-- ✅ REVERSED_CLIENT_ID (GoogleService-Info.plist 안에 있음) -->
+          <string>com.googleusercontent.apps.965384658339-9cnpnp435m5ini1t701hk515m5c2dnm2</string>
+        </array>
+      </dict>
+    </array>
+
+
   </dict>
 </plist>
