--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   logger: ^2.6.0                     # 로그 출력 도구
   permission_handler: ^12.0.1        # 권한 요청/체크
   riverpod_annotation: ^2.6.1        # Riverpod 코드 생성 어노테이션
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
