--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   riverpod_annotation: ^2.6.1        # Riverpod 코드 생성 어노테이션
   cached_network_image: ^3.4.1
   sign_in_with_apple: ^7.0.1
+  kakao_flutter_sdk: ^1.9.3
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +53,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - .env
     - assets/
     - assets/fonts/
     - assets/fonts/pretendard/
