chore : 네이버 로그인 response 설정

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -68,6 +68,14 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NidAppName</key>
+	<string>$(BUNDLE_NAME)</string>
+	<key>NidClientID</key>
+	<string>$(NAVER_CLIENT_ID)</string>
+	<key>NidClientSecret</key>
+	<string>$(NAVER_CLIENT_SECRET)</string>
+	<key>NidUrlScheme</key>
+	<string>$(NAVER_URL_SCHEME)</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
